--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,27 @@ header {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
+/* Default header styles */
+header {
+  padding: 20px 20px;
+  transition: padding 0.3s ease, font-size 0.3s ease;
+}
+
+/* When the header is scrolled */
+header.scrolled {
+  padding: 10px 10px;
+}
+
+header .logo {
+  font-size: 2.5rem;
+  transition: font-size 0.3s ease;
+}
+
+header.scrolled .logo {
+  font-size: 1.5rem;
+}
+
+
 header .logo {
   font-size: 2.5rem;
   font-weight: 900;
